<?xml version="1.0"?>
<package format="2">
  <name>example_broken_rostest</name>
  <version>0.0.0</version>
  <description>The example_broken_rostest package</description>

  <maintainer email="matt@todo.todo">matt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>rostest</exec_depend>
</package>
